Changelog for ETL-Yertl

{{ $NEXT }}

0.043     2018-09-25 18:13:41-05:00 America/Chicago

    [Fixed]

    - Fixed a test failure when using YAML::Syck. Thanks @ltriant!
      [Github #159]

    [Added]

    - Added the query and bind parameters when reporting a SQL error in
      ysql. This should make it easier to debug these errors.

0.042     2018-09-10 20:56:10-05:00 America/Chicago

    [Fixed]

    - Fixed a half-dozen warnings, including:
        - Warnings thrown while importing the `loop` sub from ETL::Yertl
        - Warnings thrown while overloading `CORE::GLOBAL::time` during
          testing
        - Warnings thrown about 'empty' not taking any arguments
      Thanks @jkeenan for fixing all these!

0.041     2018-09-05 22:22:36-05:00 America/Chicago

    [Added]

    - Added ETL::Yertl::Transform::Yq. This allows you to use `yq`
      filter language to transform documents in Perl code. The
      corresponding `yq` helper makes it very easy to do:

        use ETL::Yertl;
        my $xform = stdin | yq( '.foo' ) >> stdout;
        $xform->run;

      ETL::Yertl::Transform::Yq replaces the ETL::Yertl::Command::yq
      class, but the `yq` command-line program works exactly as it did
      before.

    - Added ETL::Yertl::InputSeries class. This creates a series of
      streams for a set of input file paths or file handles. This is
      used to implement the yto, yfrom, and yq commands: Each command
      allows for listing multiple files as arguments, and will process
      each file one-by-one in series.

0.040     2018-09-04 19:51:21-05:00 America/Chicago

    [Added]

    - Added ETL::Yertl::Transform class. This class holds a routine to
      transform documents that pass through it. Transforms can be linked
      to FormatStream sources or additional Transforms to create a chain
      of transforms. Each transform also can have a destination to write
      documents after transform.
