@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.013.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.012.
 use strict;
 use warnings;
 
@@ -29,7 +29,7 @@ my %WriteMakefileArgs = (
     "File::Spec" => 0,
     "Getopt::Long" => "2.36",
     "Hash::Merge::Simple" => 0,
-    "IO::Async" => "0.72",
+    "IO::Async" => "0.77",
     "IO::Interactive" => 0,
     "Import::Base" => "0.010",
     "JSON::MaybeXS" => 0,
@@ -78,7 +78,7 @@ my %FallbackPrereqs = (
   "Future" => 0,
   "Getopt::Long" => "2.36",
   "Hash::Merge::Simple" => 0,
-  "IO::Async" => "0.72",
+  "IO::Async" => "0.77",
   "IO::Handle" => 0,
   "IO::Interactive" => 0,
   "IPC::Open3" => 0,
