@@ -1,11 +1,8 @@
-# This file is generated by Dist::Zilla::Plugin::CPANFile v6.013
-# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
-
 requires "File::HomeDir" => "0";
 requires "File::Spec" => "0";
 requires "Getopt::Long" => "2.36";
 requires "Hash::Merge::Simple" => "0";
-requires "IO::Async" => "0.72";
+requires "IO::Async" => "0.77";
 requires "IO::Interactive" => "0";
 requires "Import::Base" => "0.010";
 requires "JSON::MaybeXS" => "0";
